fix spacing on header links, trim down text in sills and blog divs

--- a/stylesheets/index-stylesheet.css
+++ b/stylesheets/index-stylesheet.css
@@ -17,6 +17,10 @@
   width: 100%;
 }
 
+header.jumplink {
+  margin: 2%;
+}
+
 .navbar {
   background-color: #0099CC;
   width:  100%;
